--- a/space-tourism/src/index.css
+++ b/space-tourism/src/index.css
@@ -3,71 +3,25 @@
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    /** Fonts */
+    --font-family-bellefair: 'Bellefair', 'Ubuntu' sans-serif;
+    --font-family-barlow: 'Barlow Condensed', 'Ubuntu' serif;
+    --heading-1-size: 150px;
+    --heading-2-size: 100px;
+    --heading-3-size: 56px;
+    --heading-4-size: 32px;
+    --heading-5-size: 28px;
+    --heading-5-letter-spacing: 4.725;
+    --subheading-1-size: 28px;
+    --subheading-2-size: 14px;
+    --subheading-2-letter-spacing: 3.35;
+    --nav-size: 16px;
+    --nav-letter-spacing: 2.7;
+    --body-size: 18px;
+    --body-line-height: 32px;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    /** Colors */
+    --color-black: hsla(230, 35%, 7%, 1);
+    --color-blue: hsla(231, 77%, 90%, 1);
+    --color-white: hsla(0, 0%, 100%, 1);
 }
