--- a/space-tourism/src/components/HeaderNav/HeaderNav.css
+++ b/space-tourism/src/components/HeaderNav/HeaderNav.css
@@ -1,1 +1,12 @@
-.HeaderNav {}
+.HeaderNav {
+    background: rgba(255, 255, 255, 0.04);
+    backdrop-filter: blur(40.774227142333984px);
+
+    ul {
+
+    }
+
+    li {
+
+    }
+}
