kpm: Start the process of building the home page

--- a/space-tourism/src/pages/Home/HomePage.css
+++ b/space-tourism/src/pages/Home/HomePage.css
@@ -1,1 +1,10 @@
-.HomePage {}
+.HomePage {
+    font-style: italic;
+}
+
+body {
+    background-image: url('/home/background-home-desktop.jpg');
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+}
