--- a/space-tourism/src/components/HeaderNav/HeaderNav.css
+++ b/space-tourism/src/components/HeaderNav/HeaderNav.css
@@ -6,7 +6,22 @@
 
     }
 
-    li {
+    .NavText {
+        a {
+            padding-block: 35px;
+            display: block;
 
+            &.active {
+                border-bottom: 3px solid var(--color-white);
+            }
+
+            &:hover:not(.active) {
+                border-bottom: 3px solid var(--color-white-light);
+            }
+        }
+
+        &-number {
+            font-weight: 700;
+        }
     }
 }
