--- a/space-tourism/src/styles/typography.css
+++ b/space-tourism/src/styles/typography.css
@@ -1,10 +1,10 @@
-:where(.Heading-1, .Heading-2, .Heading-3, .Heading-4, .Heading-5, .Subheading-1, .Subheading-2, .NavText, .Body, p) {
+.Heading-1, .Heading-2, .Heading-3, .Heading-4, .Heading-5, .Subheading-1, .Subheading-2, .NavText, .Body, p {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 }
 
-:where(.Heading-1, .Heading-2, .Heading-3, .Heading-4, .Subheading-1, .Subheading-2, .NavText, .Body, p) {
+.Heading-1, .Heading-2, .Heading-3, .Heading-4, .Subheading-1, .Subheading-2, .NavText, .Body, p {
     color: var(--color-white);
 }
 
