kpm: Continue the process of building the home page

--- a/space-tourism/src/index.css
+++ b/space-tourism/src/index.css
@@ -13,10 +13,10 @@
     --heading-5-size: 28px;
     --heading-5-letter-spacing: 4.725;
     --subheading-1-size: 28px;
-    --subheading-2-size: 14px;
+    --subheading-2-size: 18px;
     --subheading-2-letter-spacing: 3.35;
     --nav-size: 16px;
-    --nav-letter-spacing: 2.7;
+    --nav-letter-spacing: 2.7px;
     --body-size: 18px;
     --body-line-height: 32px;
 
