--- a/space-tourism/src/components/HeaderNav/HeaderNav.css
+++ b/space-tourism/src/components/HeaderNav/HeaderNav.css
@@ -7,6 +7,10 @@
     }
 
     .NavText {
+        &:first-of-type {
+            margin-inline-start: 12.3rem;
+        }
+
         a {
             padding-block: 35px;
             display: block;
