--- a/space-tourism/src/pages/Home/HomePage.css
+++ b/space-tourism/src/pages/Home/HomePage.css
@@ -1,9 +1,89 @@
 .HomePage {
-    font-style: italic;
+    &-main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-block-start: 25rem;
+        margin-inline: auto;
+        max-width: 1110px;
+    }
+
+    &-left {
+        text-align: left;
+
+        p {
+            max-width: 444px;
+        }
+    }
+
+    &-right {
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+
+        h1 {
+            margin-block: 2.4rem;
+        }
+    }
+
+    &-circle {
+        position: relative;
+        width: 100%;
+        height: 100%;
+
+        &:hover {
+            .HomePage {
+                &-shapeBackground {
+                    visibility: visible;
+                    opacity: 0.1036;
+                    transition: all .5s linear;
+                }
+            }
+        }
+    }
+
+    &-circleText,
+    &-shape,
+    &-shapeBackground {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    &-shape,
+    &-shapeBackground {
+        display: block;
+        background-color: var(--color-white);
+        border-radius: 100%;
+    }
+
+    &-circleText {
+        color: var(--color-black);
+        z-index: 20;
+    }
+
+    &-shape {
+        padding: 11rem 6.2rem;
+        width: 274px;
+        height: 274px;
+        cursor: pointer;
+        z-index: 10;
+    }
+
+    &-shapeBackground {
+        width: 450px;
+        height: 450px;
+        transition: all .5s linear;
+
+        /* Hide */
+        visibility: hidden;
+        opacity: 0;
+    }
 }
 
-body {
+body.Home {
     background-image: url('/home/background-home-desktop.jpg');
+    background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
     background-size: cover;
