--- a/space-tourism/src/styles/base.css
+++ b/space-tourism/src/styles/base.css
@@ -1,4 +1,4 @@
-html, body, div, span, applet, object, iframe,
+body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
@@ -14,7 +14,6 @@ time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
     font: inherit;
     vertical-align: baseline;
 }
@@ -40,4 +39,11 @@ q:before, q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+html {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 62.5%; /* 10px/16px = 62.5% -> 1rem = 10px */
 }
