kpm: Start the process of building the destination page

--- a/space-tourism/src/pages/destination/DestinationPage.css
+++ b/space-tourism/src/pages/destination/DestinationPage.css
@@ -1,1 +1,70 @@
-.DestinationPage {}
+.DestinationPage {
+    &-main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-block-start: 7.6rem;
+        margin-inline: auto;
+        max-width: 1110px;
+    }
+
+    &-left {
+        text-align: left;
+
+        p {
+            max-width: 444px;
+        }
+    }
+
+    &-title {
+        color: var(--color-white);
+    }
+
+    &-number {
+        opacity: .25;
+    }
+
+    &-image {
+        margin-block-start: 9.7rem;
+    }
+
+    &-right {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        nav {
+            menu {
+
+            }
+        }
+
+        h1 {
+            margin-block: 2.4rem;
+        }
+    }
+
+    &-navItem {
+        padding-block-end: 1.2rem;
+
+        &:hover:not(&.active) {
+            cursor: pointer;
+            border-bottom: 3px solid var(--color-white-light);
+        }
+
+        &:not(&.active) {
+            color: var(--color-blue);
+        }
+
+        &.active {
+            border-bottom: 3px solid var(--color-white);
+        }
+    }
+}
+
+body.DestinationPage {
+    background-image: url('/destination/background-destination-desktop.jpg');
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+}
