--- a/space-tourism/src/pages/destination/DestinationPage.css
+++ b/space-tourism/src/pages/destination/DestinationPage.css
@@ -4,6 +4,7 @@
         grid-template-columns: 1fr 1fr;
         margin-block-start: 7.6rem;
         margin-inline: auto;
+        padding-block-end: 11.8rem;
         max-width: 1110px;
     }
 
@@ -59,12 +60,37 @@
             border-bottom: 3px solid var(--color-white);
         }
     }
+
+    &-text {
+        border-bottom: 1px solid #383B4B;
+        padding-block-end: 5.4rem;
+    }
+
+    &-data {
+        gap: 7.9rem;
+
+
+        h4 {
+            font-family: var(--font-family-barlow);
+            color: var(--color-blue);
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            letter-spacing: 2.362px;
+            text-transform: uppercase;
+            padding-block-start: 2.8rem;
+        }
+
+        p {
+            margin-block-start: 1.2rem;
+        }
+    }
 }
 
 body.DestinationPage {
     background-image: url('/destination/background-destination-desktop.jpg');
     background-repeat: no-repeat;
     width: 100%;
-    height: 100vh;
     background-size: cover;
 }
