kpm: Continue the process of building the destination page

--- a/space-tourism/src/index.css
+++ b/space-tourism/src/index.css
@@ -11,10 +11,10 @@
     --heading-3-size: 56px;
     --heading-4-size: 32px;
     --heading-5-size: 28px;
-    --heading-5-letter-spacing: 4.725;
+    --heading-5-letter-spacing: 4.725px;
     --subheading-1-size: 28px;
     --subheading-2-size: 18px;
-    --subheading-2-letter-spacing: 3.35;
+    --subheading-2-letter-spacing: 3.35px;
     --nav-size: 16px;
     --nav-letter-spacing: 2.7px;
     --body-size: 18px;
