kpm: Continue the process of building the destination page

--- a/space-tourism/src/pages/destination/DestinationPage.css
+++ b/space-tourism/src/pages/destination/DestinationPage.css
@@ -31,7 +31,7 @@
     &-right {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
 
         nav {
             menu {
