--- a/space-tourism/src/pages/destination/DestinationPage.css
+++ b/space-tourism/src/pages/destination/DestinationPage.css
@@ -32,6 +32,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        margin-block-start: 6.4rem;
 
         nav {
             menu {
