kpm: Start the process of building the crew page

--- a/space-tourism/src/pages/crew/CrewPage.css
+++ b/space-tourism/src/pages/crew/CrewPage.css
@@ -1,1 +1,10 @@
-.CrewPage {}
+.CrewPage {
+
+}
+
+body.CrewPage {
+    background-image: url('/crew/background-crew-desktop.jpg');
+    background-repeat: no-repeat;
+    width: 100%;
+    background-size: cover;
+}
