kpm: Start the process of building the crew page

--- a/space-tourism/src/pages/Home/HomePage.css
+++ b/space-tourism/src/pages/Home/HomePage.css
@@ -81,7 +81,7 @@
     }
 }
 
-body.Home {
+body.HomePage {
     background-image: url('/home/background-home-desktop.jpg');
     background-repeat: no-repeat;
     width: 100%;
