kpm: Continue the process of building the crew page

--- a/space-tourism/src/pages/crew/CrewPage.css
+++ b/space-tourism/src/pages/crew/CrewPage.css
@@ -31,6 +31,26 @@
         margin-block: 1.5rem 2.7rem;
     }
 
+    &-nav {
+        margin-block-start: 12rem;
+    }
+
+    &-navItem {
+        background-color: var(--color-white);
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 100%;
+        cursor: pointer;
+
+        &:not(.active) {
+            opacity: 0.1744;
+        }
+
+        &:hover:not(.active) {
+            opacity: 0.5001;
+        }
+    }
+
     &-right {
         justify-self: self-end;
     }
