--- a/space-tourism/src/components/Header/Header.css
+++ b/space-tourism/src/components/Header/Header.css
@@ -1,7 +1,32 @@
 .Header {
-    margin: 4rem auto 0;
+    margin: 2.4rem auto 0;
+    position: relative;
+
+    @screen md {
+        margin: 4rem auto 0;
+    }
 
     &-logo {
-        margin-inline-start: 5.5rem;
+        margin-inline-start: 2.4rem;
+        width: 4rem;
+        height: 4rem;
+
+        @screen md {
+            width: 4.8rem;
+            height: 4.8rem;
+            margin-inline-start: 5.5rem;
+        }
+    }
+
+    &-hamberger {
+        display: block;
+        position: absolute;
+        right: 2.4rem;
+        top: 50%;
+        transform: translateY(-50%);
+
+        @screen md {
+            display: none;
+        }
     }
 }
