--- a/space-tourism/src/components/HeaderNav/HeaderNav.css
+++ b/space-tourism/src/components/HeaderNav/HeaderNav.css
@@ -2,6 +2,14 @@
     background: rgba(255, 255, 255, 0.04);
     backdrop-filter: blur(40.774227142333984px);
 
+    position: absolute;
+    left: 100%;
+    top: 1px;
+
+    @screen md {
+        position: relative;
+    }
+
     ul {
 
     }
