--- a/space-tourism/src/pages/home/HomePage.css
+++ b/space-tourism/src/pages/home/HomePage.css
@@ -1,10 +1,15 @@
 .HomePage {
     &-main {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        margin-block-start: 25rem;
-        margin-inline: auto;
-        max-width: var(--main-element-width);
+        grid-template-rows: 1fr 1fr;
+
+         @screen md {
+             grid-template-columns: 1fr 1fr;
+             grid-template-rows: 1fr;
+             margin-block-start: 25rem;
+             margin-inline: auto;
+             max-width: var(--main-element-width);
+         }
     }
 
     &-left {
@@ -19,6 +24,7 @@
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
+        height: 100%;
 
         h1 {
             margin-block: 2.4rem;
@@ -86,5 +92,8 @@ body.HomePage {
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
-    background-size: cover;
+
+    @screen md {
+        background-size: cover;
+    }
 }
