--- a/space-tourism/src/components/HeaderNav/HeaderNav.css
+++ b/space-tourism/src/components/HeaderNav/HeaderNav.css
@@ -6,14 +6,23 @@
     backdrop-filter: blur(40px);
 
     position: absolute;
-    /*left: 100%;*/
-    right: 0;
+    right: -100%;
     top: -2.4rem;
-    width: calc(100vw * .5);
+    width: calc(100vw * .75);
+    transition: right .25s ease-in;
+    overflow-x: hidden;
+    height: calc(100vh + 2.4rem);
 
     @screen md {
         position: relative;
         max-width: unset;
+        width: 100%;
+    }
+
+    /* Handle states */
+    &-isOpen {
+        right: 0;
+        transition: right .25s ease-in;
     }
 
     &-close {
