kpm: Continue the process of building the mobile styles

--- a/space-tourism/src/components/Header/Header.css
+++ b/space-tourism/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 .Header {
-    margin: 2.4rem auto 0;
+    padding: 2.4rem 0;
     position: relative;
+    z-index: 100;
 
     @screen md {
         margin: 4rem auto 0;
