--- a/space-tourism/src/pages/home/HomePage.css
+++ b/space-tourism/src/pages/home/HomePage.css
@@ -2,6 +2,7 @@
     &-main {
         display: grid;
         grid-template-rows: 1fr 1fr;
+        margin-block-start: 4.8rem;
 
          @screen md {
              grid-template-columns: 1fr 1fr;
@@ -13,11 +14,29 @@
     }
 
     &-left {
-        text-align: left;
+        text-align: center;
+
+        @screen md {
+            text-align: left;
+        }
 
         p {
             max-width: 444px;
         }
+    }
+
+    &-subtitle {
+        font-size: 16px;
+    }
+
+    &-title {
+        font-size: 80px;
+        padding-block: 1.6rem;
+    }
+
+    &-body {
+        font-size: 15px;
+        margin-inline: auto;
     }
 
     &-right {
@@ -66,24 +85,38 @@
     &-circleText {
         color: var(--color-black);
         z-index: 20;
+        font-size: 20px;
+
+        @screen md {
+            font-size: 32px;
+        }
     }
 
     &-shape {
-        padding: 11rem 6.2rem;
-        width: 274px;
-        height: 274px;
+        width: 150px;
+        height: 150px;
         cursor: pointer;
         z-index: 10;
+
+        @screen md {
+            padding: 11rem 6.2rem;
+            width: 274px;
+            height: 274px;
+        }
     }
 
     &-shapeBackground {
-        width: 450px;
-        height: 450px;
         transition: all .5s linear;
-
+        width: 225px;
+        height: 225px;
         /* Hide */
         visibility: hidden;
         opacity: 0;
+
+        @screen md {
+            width: 450px;
+            height: 450px;
+        }
     }
 }
 
