--- a/space-tourism/src/pages/home/HomePage.css
+++ b/space-tourism/src/pages/home/HomePage.css
@@ -1,15 +1,19 @@
 .HomePage {
     &-main {
         display: grid;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: auto auto;
+        grid-gap: 2.4rem;
         margin-block-start: 4.8rem;
+        max-width: var(--main-element-width);
+        margin-inline: auto;
+        padding-block-end: 2.4rem;
 
          @screen md {
              grid-template-columns: 1fr 1fr;
              grid-template-rows: 1fr;
              margin-block-start: 25rem;
-             margin-inline: auto;
-             max-width: var(--main-element-width);
+             padding-block-end: 0;
+             grid-gap: 0;
          }
     }
 
@@ -43,7 +47,11 @@
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
-        height: 100%;
+        height: 225px;
+
+        @screen md {
+            height: 100%;
+        }
 
         h1 {
             margin-block: 2.4rem;
@@ -109,6 +117,7 @@
         transition: all .5s linear;
         width: 225px;
         height: 225px;
+
         /* Hide */
         visibility: hidden;
         opacity: 0;
@@ -125,7 +134,7 @@ body.HomePage {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 
     @screen md {
         background-image: url('/home/background-home-tablet.jpg');
