--- a/space-tourism/src/pages/crew/CrewPage.css
+++ b/space-tourism/src/pages/crew/CrewPage.css
@@ -1,14 +1,19 @@
 .CrewPage {
     &-main {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
         margin-block-start: 7.6rem;
         margin-inline: auto;
         max-width: var(--main-element-width);
+        display: flex;
+        flex-direction: column;
+
+        @screen md {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
     }
 
     &-left {
-
+        order: 2;
     }
 
     &-heading {
@@ -32,7 +37,31 @@
     }
 
     &-nav {
-        margin-block-start: 12rem;
+        margin-block-start: 3.2rem;
+
+        @screen md {
+            margin-block-start: 12rem;
+        }
+
+        &--mobile {
+            display: block;
+
+            menu {
+                justify-content: center;
+            }
+
+            @screen md {
+                display: none;
+            }
+        }
+
+        &--desktop {
+            display: none;
+
+            @screen md {
+                display: block;
+            }
+        }
     }
 
     &-navItem {
@@ -53,6 +82,11 @@
 
     &-right {
         justify-self: self-end;
+
+        figure {
+            max-width: 177px;
+            margin-inline: auto;
+        }
     }
 
     &-text {
@@ -61,8 +95,17 @@
 }
 
 body.CrewPage {
-    background-image: url('/crew/background-crew-desktop.jpg');
+    background-image: url('/crew/background-crew-mobile.jpg');
     background-repeat: no-repeat;
-    width: 100%;
     background-size: cover;
+    width: 100%;
+    height: 100%;
+
+    @screen md {
+        background-image: url('/crew/background-crew-tablet.jpg');
+    }
+
+    @screen lg {
+        background-image: url('/crew/background-crew-desktop.jpg');
+    }
 }
