--- a/space-tourism/src/components/PageHeader/PageHeader.css
+++ b/space-tourism/src/components/PageHeader/PageHeader.css
@@ -27,6 +27,7 @@
     &-number {
         opacity: .25;
         margin-inline-end: 1.6rem;
+        z-index: 10;
 
         @screen lg {
             margin-inline-end: 2.4rem;
