--- a/space-tourism/src/pages/technology/TechnologyPage.css
+++ b/space-tourism/src/pages/technology/TechnologyPage.css
@@ -1,40 +1,93 @@
 .TechnologyPage {
     &-main {
-        display: grid;
-        grid-template-columns: 630px 515px;
+        display: flex;
+        flex-direction: column;
         margin-inline: auto;
-        padding-block-end: 11.8rem;
         max-width: var(--main-element-width);
         position: relative;
-        column-gap: 130px;
+
+        @screen lg {
+            display: grid;
+            grid-template-columns: 630px 515px;
+            column-gap: 130px;
+            padding-block-end: 11.8rem;
+        }
     }
 
-    &-heading {
-        margin-block-end: 13.7rem;
+    &-left {
+        order: 2;
+
+        @screen lg {
+            order: unset;
+        }
+    }
+
+    &-right {
+        width: 100vw;
+        margin-inline-start: calc(-5%);
+        margin-block-end: 3.2rem;
+
+        @screen lg {
+            width: 100%;
+            margin-inline-start: 0;
+            margin-block-start: 6rem;
+        }
+    }
+
+    &-image {
+        max-height: 40vh;
+        height: 100%;
+        width: 100vw;
+
+        img {
+            object-fit: cover;
+            object-position: center;
+            width: 100%;
+            height: 100%;
+            max-width: 100%;
+            max-height: 40vh;
+        }
     }
 
     &-content {
+        @apply flex-col items-center;
         column-gap: 8rem;
+
+        @screen lg {
+            @apply gap-[36px];
+        }
     }
 
-    &-nav {}
+    &-nav {
+        menu {
+            column-gap: 1.6rem;
+        }
+    }
 
     &-navItem {
+        @apply w-16 h-16;
+        justify-content: center;
+        align-items: center;
         color: var(--color-white);
         position: relative;
         text-align: center;
         font-family: var(--font-family-bellefair);
-        font-size: 32px;
+        font-size: 1.6rem;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
-        letter-spacing: 2px;
-        width: 8rem;
-        height: 8rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        /*letter-spacing: .2rem;*/
         cursor: pointer;
+
+        @screen md {
+            font-size: 2.4rem;
+            @apply w-24 h-24;
+        }
+
+        @screen lg {
+            @apply w-32 h-32;
+            font-size: 3.2rem;
+        }
 
         &.active {
             color: #0B0D17;
@@ -48,7 +101,7 @@
         }
     }
 
-    &-number {
+    &-navNumber {
         z-index: 10;
     }
 
@@ -62,19 +115,19 @@
             inset: 0;
         }
     }
-
-    &-left {}
-
-    &-right {
-        /*position: absolute;*/
-        /*right: 0;*/
-        margin-block-start: 6rem;
-    }
 }
 
 body.TechnologyPage {
-    background-image: url('/technology/background-technology-desktop.jpg');
+    background-image: url('/technology/background-technology-mobile.jpg');
     background-repeat: no-repeat;
     width: 100%;
     background-size: cover;
+
+    @screen md {
+        background-image: url('/destination/background-technology-tablet.jpg');
+    }
+
+    @screen lg {
+        background-image: url('/destination/background-technology-desktop.jpg');
+    }
 }
