--- a/space-tourism/src/styles/typography.css
+++ b/space-tourism/src/styles/typography.css
@@ -19,9 +19,18 @@
 }
 
 .Heading-3 {
+    --heading-3-size: 2.4rem;
     font-family: var(--font-family-bellefair);
     font-size: var(--heading-3-size);
     text-transform: uppercase;
+
+    @screen md {
+        --heading-3-size: 4rem;
+    }
+
+    @screen lg {
+        --heading-3-size: 5.6rem;
+    }
 }
 
 .Heading-4 {
@@ -60,7 +69,19 @@
 
 .Body,
 p {
+    --body-size: 1.5rem;
     font-family: var(--font-family-barlow);
     font-size: var(--body-size);
     line-height: var(--body-line-height);
+    color: var(--color-blue);
+    text-align: center;
+
+    @screen md {
+        --body-size: 1.6rem;
+    }
+
+    @screen lg {
+        --body-size: 1.8rem;
+        text-align: left;
+    }
 }
