--- a/space-tourism/src/pages/technology/TechnologyPage.css
+++ b/space-tourism/src/pages/technology/TechnologyPage.css
@@ -44,6 +44,16 @@
     }
 
     &-nav {
+        margin-block-end: 2.6rem;
+
+        @screen md {
+            margin-block-end: 4.4rem;
+        }
+
+        @screen md {
+            margin-block-end: unset;
+        }
+
         menu {
             column-gap: 1.6rem;
         }
