--- a/space-tourism/src/pages/technology/components/TechnologyContent/TechnologyContent.css
+++ b/space-tourism/src/pages/technology/components/TechnologyContent/TechnologyContent.css
@@ -16,11 +16,29 @@
     }
 
     &-subtitle {
+        color: var(--color-blue);
+        font-family: var(--font-family-barlow);
+        font-size: 1.4rem;
+        letter-spacing: 2.36px;
+        margin-block-end: .8rem;
 
+        @screen md {
+            margin-block-end: 1.6rem;
+        }
+
+        @screen lg {
+            margin-block-end: 1.2rem;
+        }
     }
 
-    &-title {
+    &-name {
+        margin-block-end: 1.6rem;
+        font-size: 2.4rem;
 
+        @screen lg {
+            margin-block: 1.5rem 2.7rem;
+            font-size: 5.4rem;
+        }
     }
 
     &-body {
