--- a/space-tourism/src/index.css
+++ b/space-tourism/src/index.css
@@ -43,4 +43,12 @@
         font-weight: 400;
         line-height: normal;
     }
+
+    .body-background {
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+        min-height: 100vh;
+    }
 }
