--- a/space-tourism/src/pages/crew/components/CrewImage/CrewImage.css
+++ b/space-tourism/src/pages/crew/components/CrewImage/CrewImage.css
@@ -1,8 +1,15 @@
 .CrewImage {
     &-figure {
-        max-width: 177px;
         margin-inline: auto;
+        width: 100%;
+        height: 40vh;
     }
 
-    &-img {}
+    &-img {
+        width: 100%;
+        height: 100%;
+        max-height: 40vh;
+        object-fit: contain;
+        object-position: bottom;
+    }
 }
