--- a/space-tourism/src/components/Header/Header.css
+++ b/space-tourism/src/components/Header/Header.css
@@ -5,7 +5,7 @@
     margin-block-end: 2.4rem;
 
     @screen md {
-        padding: 0;
+        padding: 0 0 2.4rem 0;
     }
 
     @screen lg {
@@ -21,6 +21,10 @@
         @screen md {
             width: 4.8rem;
             height: 4.8rem;
+            margin-inline-start: 3.4rem;
+        }
+
+        @screen lg {
             margin-inline-start: 5.5rem;
         }
     }
