--- a/space-tourism/src/pages/crew/CrewPage.css
+++ b/space-tourism/src/pages/crew/CrewPage.css
@@ -7,7 +7,7 @@
         align-items: center;
         padding-block-end: 8rem;
 
-        @screen md {
+        @screen lg {
             display: grid;
             grid-template-columns: 1fr 1fr;
             align-items: unset;
