--- a/space-tourism/src/pages/technology/TechnologyPage.css
+++ b/space-tourism/src/pages/technology/TechnologyPage.css
@@ -3,6 +3,7 @@
         display: flex;
         flex-direction: column;
         margin-inline: auto;
+        width: 100vw;
         max-width: var(--main-element-width);
         position: relative;
         padding-block-end: 8rem;
@@ -24,9 +25,11 @@
     }
 
     &-right {
-        width: 100vw;
-        margin-inline-start: calc(-5%);
         margin-block-end: 3.2rem;
+
+        @screen md {
+            margin-block-end: 5.6rem;
+        }
 
         @screen lg {
             width: 100%;
