--- a/space-tourism/src/pages/technology/components/TechnologyImage/TechnologyImage.css
+++ b/space-tourism/src/pages/technology/components/TechnologyImage/TechnologyImage.css
@@ -1,6 +1,5 @@
 .TechnologyImage {
     &-figure {
-        max-height: 40vh;
         height: 100%;
         width: 100vw;
     }
@@ -12,5 +11,9 @@
         height: 100%;
         max-width: 100%;
         max-height: 40vh;
+
+        @screen md {
+            max-height: 30vh;
+        }
     }
 }
