--- a/space-tourism/src/pages/crew/components/CrewContent/CrewContent.css
+++ b/space-tourism/src/pages/crew/components/CrewContent/CrewContent.css
@@ -13,6 +13,10 @@
         opacity: 0.5042;
         font-size: 1.6rem;
 
+        @screen md {
+            font-size: 2.4rem;
+        }
+
         @screen lg {
             font-size: 3.2rem;
         }
@@ -22,6 +26,10 @@
         margin-block: 0 1.6rem;
         font-size: 2.4rem;
 
+        @screen md {
+            font-size: 4rem;
+        }
+
         @screen lg {
             margin-block: 1.5rem 2.7rem;
             font-size: 5.4rem;
@@ -29,11 +37,9 @@
     }
 
     &-body {
-        font-size: 1.5rem;
         margin-block-end: 3.2rem;
 
         @screen lg {
-            font-size: 1.8rem;
             margin-block-end: 0;
         }
     }
