--- a/space-tourism/src/pages/home/HomePage.css
+++ b/space-tourism/src/pages/home/HomePage.css
@@ -8,7 +8,7 @@
         margin-inline: auto;
         padding-block-end: 2.4rem;
 
-         @screen md {
+         @screen lg {
              grid-template-columns: 1fr 1fr;
              grid-template-rows: 1fr;
              margin-block-start: 25rem;
@@ -20,7 +20,7 @@
     &-left {
         text-align: center;
 
-        @screen md {
+        @screen lg {
             text-align: left;
         }
 
@@ -30,12 +30,24 @@
     }
 
     &-subtitle {
-        font-size: 16px;
+        font-size: 1.6rem;
+
+        @screen md {
+            font-size: 2rem;
+        }
+
+        @screen lg {
+            font-size: var(--heading-5-size);
+        }
     }
 
     &-title {
         font-size: 80px;
         padding-block: 1.6rem;
+
+        @screen md {
+            font-size: var(--heading-1-size);
+        }
     }
 
     &-body {
@@ -50,7 +62,7 @@
         height: 225px;
 
         @screen md {
-            height: 100%;
+            height: 274px;
         }
 
         h1 {
@@ -63,6 +75,10 @@
         width: 100%;
         height: 100%;
 
+        @screen md {
+            height: fit-content;
+        }
+
         &:hover {
             .HomePage {
                 &-shapeBackground {
@@ -72,6 +88,12 @@
                 }
             }
         }
+    }
+
+    &-circleLink {
+        display: block;
+        height: 100%;
+        width: 100%;
     }
 
     &-circleText,
@@ -94,6 +116,7 @@
         color: var(--color-black);
         z-index: 20;
         font-size: 20px;
+        pointer-events: none;
 
         @screen md {
             font-size: 32px;
