--- a/space-tourism/src/pages/home/HomePage.css
+++ b/space-tourism/src/pages/home/HomePage.css
@@ -8,6 +8,11 @@
         margin-inline: auto;
         padding-block-end: 2.4rem;
 
+        @screen md {
+            margin-block-start: 8rem;
+            grid-row-gap: 10rem;
+        }
+
          @screen lg {
              grid-template-columns: 1fr 1fr;
              grid-template-rows: 1fr;
@@ -74,10 +79,6 @@
         position: relative;
         width: 100%;
         height: 100%;
-
-        @screen md {
-            height: fit-content;
-        }
 
         &:hover {
             .HomePage {
