kpm: Update desktop styles

--- a/space-tourism/src/components/HeaderNav/HeaderNav.css
+++ b/space-tourism/src/components/HeaderNav/HeaderNav.css
@@ -51,6 +51,7 @@
 
         @screen lg {
             @apply gap-[50px];
+            justify-content: flex-start;
         }
     }
 
@@ -91,6 +92,7 @@
 
             @screen lg {
                 display: inline-block;
+                margin-inline-end: 1.2rem;
             }
         }
     }
