--- a/space-tourism/src/pages/destination/DestinationPage.css
+++ b/space-tourism/src/pages/destination/DestinationPage.css
@@ -41,8 +41,9 @@
         }
 
         @screen lg {
-            justify-content: flex-start;
             justify-self: end;
+            justify-content: flex-start;
+            align-items: flex-start;
         }
 
         nav {
@@ -61,6 +62,7 @@
 
             @screen lg {
                 font-size: var(--heading-2-size);
+                margin-block: 3.2rem 2.4rem;
             }
         }
 
@@ -69,9 +71,9 @@
             flex-direction: column;
             align-items: center;
 
-            /*@screen md {*/
-            /*    display: block;*/
-            /*}*/
+            @screen lg {
+                align-items: flex-start;
+            }
         }
     }
 
