--- a/space-tourism/src/pages/destination/components/DestinationImage/DestinationImage.css
+++ b/space-tourism/src/pages/destination/components/DestinationImage/DestinationImage.css
@@ -7,7 +7,12 @@
         @screen md {
             max-width: 300px;
             max-height: 300px;
-            margin-block-start: 9.7rem;
+            margin-block-start: 6rem;
+        }
+
+        @screen md {
+            max-width: 445px;
+            max-height: 445px;
         }
     }
 
