kpm: Update styles and make a component for the HomeCircle

--- a/space-tourism/src/index.css
+++ b/space-tourism/src/index.css
@@ -33,7 +33,8 @@
     --main-element-width: 90%;
 
     @screen lg {
-        --main-element-width: 1110px;
+        --main-element-width: 95%;
+        --main-max-element-width: 1110px;
     }
 }
 
