--- a/space-tourism/src/pages/home/HomePage.css
+++ b/space-tourism/src/pages/home/HomePage.css
@@ -4,7 +4,8 @@
         grid-template-rows: auto auto;
         grid-gap: 2.4rem;
         margin-block-start: 4.8rem;
-        max-width: var(--main-element-width);
+        max-width: var(--main-max-element-width);
+        width: var(--main-element-width);
         margin-inline: auto;
         padding-block-end: 2.4rem;
 
@@ -84,97 +85,6 @@
 
         h1 {
             margin-block: 2.4rem;
-        }
-    }
-
-    &-circle {
-        position: relative;
-        width: 100%;
-        height: 100%;
-
-        &:hover {
-            .HomePage {
-                &-shapeBackground {
-                    visibility: visible;
-                    opacity: 0.1036;
-                    transition: all .5s linear;
-                }
-            }
-        }
-    }
-
-    &-circleLink {
-        display: block;
-        height: 100%;
-        width: 100%;
-
-        @screen lg {
-            height: unset;
-            width: unset;
-        }
-    }
-
-    &-circleText,
-    &-circleLink,
-    &-shapeBackground {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-
-        @screen lg {
-            right: calc(-274px / 2);
-            left: unset;
-        }
-    }
-
-    &-shape,
-    &-shapeBackground {
-        display: block;
-        background-color: var(--color-white);
-        border-radius: 100%;
-    }
-
-    &-circleText {
-        color: var(--color-black);
-        z-index: 20;
-        font-size: 20px;
-        pointer-events: none;
-
-        @screen md {
-            font-size: 32px;
-        }
-
-        @screen lg {
-            right: 0;
-        }
-    }
-
-    &-shape {
-        width: 150px;
-        height: 150px;
-        cursor: pointer;
-        z-index: 10;
-
-        @screen md {
-            padding: 11rem 6.2rem;
-            width: 274px;
-            height: 274px;
-        }
-    }
-
-    &-shapeBackground {
-        transition: all .5s linear;
-        width: 225px;
-        height: 225px;
-
-        /* Hide */
-        visibility: hidden;
-        opacity: 0;
-
-        @screen md {
-            width: 450px;
-            height: 450px;
         }
     }
 }
