--- a/space-tourism/src/pages/technology/TechnologyPage.css
+++ b/space-tourism/src/pages/technology/TechnologyPage.css
@@ -4,7 +4,7 @@
         flex-direction: column;
         margin-inline: auto;
         width: 100vw;
-        max-width: var(--main-element-width);
+        max-width: var(--main-max-element-width);
         position: relative;
         padding-block-end: 8rem;
 
