kpm: Update Circle component and update styles

--- a/space-tourism/src/pages/home/components/HomeCircle/HomeCircle.css
+++ b/space-tourism/src/pages/home/components/HomeCircle/HomeCircle.css
@@ -91,5 +91,10 @@
             width: 450px;
             height: 450px;
         }
+
+        /* @todo this needs to be worked out */
+        @screen lg {
+            right: calc(-609px / 2);
+        }
     }
 }
