kpm: Update the HomePage styles

--- a/space-tourism/src/pages/home/HomePage.css
+++ b/space-tourism/src/pages/home/HomePage.css
@@ -15,12 +15,16 @@
         }
 
          @screen lg {
-             grid-template-columns: 1fr 1fr;
+             grid-template-columns: minmax(auto, 1fr) minmax(auto, 1fr);
              grid-template-rows: 1fr;
              margin-block-start: 25rem;
              padding-block-end: 0;
              grid-gap: 0;
          }
+
+        @screen xl {
+            grid-template-columns: minmax(auto, 2fr) minmax(auto, 1fr);
+        }
     }
 
     &-left {
