--- a/space-tourism/src/pages/technology/components/TechnologyImage/TechnologyImage.css
+++ b/space-tourism/src/pages/technology/components/TechnologyImage/TechnologyImage.css
@@ -17,11 +17,45 @@
         max-height: 40vh;
 
         @screen md {
-            max-height: 30vh;
+            /*max-height: 30vh;*/
         }
 
         @screen lg {
             max-height: unset;
+        }
+    }
+
+    &-backgroundImage {
+        width: 100%;
+        background-repeat: no-repeat;
+
+
+        &--mobile {
+            max-width: 100%;
+            height: 40vh;
+            max-height: 40vh;
+            background-size: cover;
+            background-position: center center;
+
+            @screen md {
+                height: 30vh;
+            }
+
+            @screen lg {
+                display: none;
+            }
+        }
+
+        &--desktop {
+            background-position: center right;
+            margin-block-start: 4rem;
+            background-size: contain;
+            display: none;
+            height: 100%;
+
+            @screen lg {
+                display: block;
+            }
         }
     }
 }
